Fix content-link extra spaces in blog

--- a/scss/blog/_posts.scss
+++ b/scss/blog/_posts.scss
@@ -137,6 +137,7 @@
                                 &::before {
                                     content: "";
                                     margin: 0;
+                                    bottom: 0 !important;
                                 }
                             }
                         }
